<resources>
    <string name="app_name">GlassHotelDemo</string>
    <string name="background">Background</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc">desc</string>
    <string name="room_289">ROOM 289</string>
    <string name="_05_11">05:11</string>
    <string name="pm">PM</string>
    <string name="data">March 25, 2022 | Friday</string>
    <string name="welcome_albert_yu">Welcome, ALBERT YU&#160;</string>
    <string name="messages">MESSAGES</string>
    <string name="discount_offer">Discount Offer</string>
    <string name="thank_you">Thank you.</string>
    <string name="from">From,</string>
    <string name="back"><![CDATA[< BACK]]></string>
    <string name="amenities">AMENITIES</string>
    <string name="emergency">EMERGENCY BROADCAST</string>
    <string name="em">THIS IS A TEST OF EMERGENCY ALERT SYSTEM</string>
</resources>