<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainPage">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            app:layout_constraintBottom_toTopOf="@id/gl3"
            app:layout_constraintStart_toEndOf="@id/gl1"
            android:id="@+id/ivLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/desc" />

        <TextView
            android:textSize="28sp"
            android:textColor="#FF2E2E2E"
            android:text="@string/room_289"
            android:fontFamily="@font/selawksl"
            app:layout_constraintBottom_toTopOf="@id/gl4"
            app:layout_constraintEnd_toEndOf="@id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintBottom_toTopOf="@id/gls2"
            app:layout_constraintEnd_toStartOf="@id/gl2"
            android:textSize="58sp"
            android:id="@+id/owner"
            android:textColor="#FF2E2E2E"
            android:fontFamily="@font/freesans1"
            android:text="@string/welcome_albert_yu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextClock
            android:id="@+id/tc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:format12Hour="a"
            android:text="@string/pm"
            android:textColor="#FF2E2E2E"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/gls1"
            app:layout_constraintEnd_toStartOf="@id/gl2" />

        <TextClock
            android:id="@+id/tc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:format12Hour="hh:mm"
            android:text="@string/_05_11"
            android:textColor="#FF2E2E2E"
            android:textSize="58sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/gls1"
            app:layout_constraintEnd_toStartOf="@id/tc1" />

        <TextClock
            android:id="@+id/tc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/selawksl"
            android:format12Hour="MMMM dd, yyyy | EEEE"
            android:text="@string/data"
            android:textColor="#FF2E2E2E"
            app:layout_constraintEnd_toStartOf="@id/gl2"
            app:layout_constraintBottom_toTopOf="@id/tc2"
            android:textSize="28sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/uiRv"
            android:foregroundGravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/gl3"
            app:layout_constraintEnd_toStartOf="@id/gl2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gls1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gls2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".08"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".99"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".25"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>